# Algorithms_Hillel

./: CMakeLists.txt  first_lesson.cpp  first_lesson.h  first_test.cpp  main.cpp  second_test.cpp
first/: first_lesson.h  first_test.cpp
lesson/first/: first_lesson.cpp
lesson/second/: second_lesson.cpp  second_lesson.h
second/: second_test.cpp
third/: third_lesson.cpp  third_lesson.h  third_test.cpp
